# RayTracing

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
src/: main.rs  render.rs
src/bvh/: fixed.rs  mod.rs  tree.rs
src/types/: mod.rs  vec3.rs
